# myNails

./: .gitignore  demarrage.sh  package-lock.json  package.json  pyproject.toml
planity/: ghc.env
planity/BDD/: data.sql  table.sql
planity/backend/: .env  app.py  requirements.txt
planity/frontend/: package-lock.json  package.json
planity/frontend/public/: index.html
planity/frontend/src/: App.css  App.js  index.js
planity/frontend/src/components/: AppointmentForm.js  AppointmentList.js  AppointmentView.js  AuthContext.js  AvailabilityView.js  Footer.js  Header.js  HomePage.js  LandingPage.js  ProthesistDashboard.js
planity/frontend/src/css/: AppointmentForm.css  AppointmentList.css  AuthContext.css  Footer.css  HomePage.css  LandingPage.css  ProthesistDashboard.css  global.css  header.css
